# IS_project

./: README.md  client.py  data_from_api.py  kb.py  main.py  models.py  preproccessing.py  pyproject.toml
labels/: background.p  clothes.p  eyes.p  mouth.p
n3/: KB_NFT.n3  KB_updated.n3
